# app-helloworld

./: .axconfig.toml  .gitignore  Cargo.toml  README.md  build.rs  run_qemu.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: get_deps.sh  test.sh
xtask/src/: main.rs
