[package]
name = "arceos-helloworld"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/app-helloworld"

[dependencies]
axstd = { git = "https://github.com/arceos-org/arceos.git", optional = true }
